Ticket controller & events + rest doc
